# move-optimizer-transpiler

./: .gitignore  CMakeLists.txt  README.md  build.sh  test.sh
.github/workflows/: ci.yml
examples/: after.cpp  before.cpp
include/: ast_visitor.h  code_transformer.h  move_optimizer.h
src/: ast_visitor.cpp  code_transformer.cpp  main.cpp  move_optimizer.cpp
test/: CMakeLists.txt  test_main.cpp
test/test_cases/: basic_move.cpp  function_args.cpp  return_value.cpp
